fix: fixed broken css on mod pages

--- a/apps/juxtaposition-ui/webfiles/web/css/admin.css
+++ b/apps/juxtaposition-ui/webfiles/web/css/admin.css
@@ -43,6 +43,12 @@
     }
 }
 
+.admin-center-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .account-status-editor {
     background: #161931;
     border: 1px solid var(--background-alt);
