--- a/apps/juxtaposition-ui/webfiles/web/css/web.scss
+++ b/apps/juxtaposition-ui/webfiles/web/css/web.scss
@@ -1376,6 +1376,7 @@ li.reports .button-spacer {
 
 .accounts .hover {
   padding: 0ch;
+  flex: 1;
 }
 .accounts .icon {
   width: 40px;
